; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_display.c_nouveau_display_dumb_map_offset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_display.c_nouveau_display_dumb_map_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_file = type { i32 }
%struct.drm_device = type { i32 }
%struct.drm_gem_object = type { %struct.nouveau_bo* }
%struct.nouveau_bo = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nouveau_display_dumb_map_offset(%struct.drm_file* %0, %struct.drm_device* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.drm_file*, align 8
  %7 = alloca %struct.drm_device*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.drm_gem_object*, align 8
  %11 = alloca %struct.nouveau_bo*, align 8
  store %struct.drm_file* %0, %struct.drm_file** %6, align 8
  store %struct.drm_device* %1, %struct.drm_device** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = load %struct.drm_device*, %struct.drm_device** %7, align 8
  %13 = load %struct.drm_file*, %struct.drm_file** %6, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call %struct.drm_gem_object* @drm_gem_object_lookup(%struct.drm_device* %12, %struct.drm_file* %13, i32 %14)
  store %struct.drm_gem_object* %15, %struct.drm_gem_object** %10, align 8
  %16 = load %struct.drm_gem_object*, %struct.drm_gem_object** %10, align 8
  %17 = icmp ne %struct.drm_gem_object* %16, null
  br i1 %17, label %18, label %29

18:                                               ; preds = %4
  %19 = load %struct.drm_gem_object*, %struct.drm_gem_object** %10, align 8
  %20 = getelementptr inbounds %struct.drm_gem_object, %struct.drm_gem_object* %19, i32 0, i32 0
  %21 = load %struct.nouveau_bo*, %struct.nouveau_bo** %20, align 8
  store %struct.nouveau_bo* %21, %struct.nouveau_bo** %11, align 8
  %22 = load %struct.nouveau_bo*, %struct.nouveau_bo** %11, align 8
  %23 = getelementptr inbounds %struct.nouveau_bo, %struct.nouveau_bo* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** %9, align 8
  store i32 %25, i32* %26, align 4
  %27 = load %struct.drm_gem_object*, %struct.drm_gem_object** %10, align 8
  %28 = call i32 @drm_gem_object_unreference_unlocked(%struct.drm_gem_object* %27)
  store i32 0, i32* %5, align 4
  br label %32

29:                                               ; preds = %4
  %30 = load i32, i32* @ENOENT, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %29, %18
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local %struct.drm_gem_object* @drm_gem_object_lookup(%struct.drm_device*, %struct.drm_file*, i32) #1

declare dso_local i32 @drm_gem_object_unreference_unlocked(%struct.drm_gem_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
